# dde-wloutput-daemon

./: CMakeLists.txt  README.org
.reuse/: dep5
debian/: README.source  changelog  control  copyright  install  rules
docs/: common.h  dev_design.org
misc/: com.deepin.daemon.KWayland.service  org.deepin.dde.KWayland1.service
src/: CMakeLists.txt  dplasma_window.cpp  dplasma_window.h  main.cpp  plasma_window_interface.cpp  plasma_window_interface.h  window_manager_interface.cpp  window_manager_interface.h  wldpms_interface.cpp  wldpms_interface.h  wldpms_manager_interface.cpp  wldpms_manager_interface.h  wlidle_interface.cpp  wlidle_interface.h  wloutput_interface.cpp  wloutput_interface.h
test/: CMakeLists.txt  main.cpp  signal_handler.cpp  signal_handler.h
